[package]
name = "caddy_reverse_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
headless_chrome = "0.17.0" # Управление headless-браузером Chrome
tokio = { version = "1", features = ["full"] } # Асинхронность
once_cell = "1.18.0" # Глобальные статические инициализации
log = "0.4" # Логирование
env_logger = "0.10" # Логирование в stdout/stderr
toml = "0.5.9" # Работа с TOML
serde = { version = "1.0", features = ["derive"] } # Сериализация/десериализация данных

[[bin]]
name = "caddy_reverse_proxy"
path = "src/main.rs"
